--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <div class="container">
             <img src="noah-silliman-EcTL3VkgId4-unsplash.jpg" alt="Sports Moves for Success Logo" title="Sports Moves for Success background image of basketball and hoop" class="responsive" style="width: 100%; height: 300px">
-            <div class="centered">Sports MS is an AAU organization designed to help small market families develop successful young men in the local communities through sports, nutrition, and maturation.
+            <div class="centered">Sports MS is an AAU organization designed to help small market families develop successful young men in the local communities through sports, nutrition, and maturation.</div>
+           
         </div>
       
+          <div>
+            <h2> Book a Personal Workout</h2>
+            <iframe src="https://calendar.google.com/calendar/embed?src=sportsmovesforsuccess%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+          </div>
+	
 </body>
 </html>
