--- a/sportsmshome-index.html
+++ b/sportsmshome-index.html
@@ -54,7 +54,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="topnav" id="myTopnav"> 
   <h1 class="logo"> Sports Moves for Success</h1>
-  <a href="index.html" class="active">Home</a>
+  <a href="sportsmshome-index.html" class="active">Home</a>
   <a href="TeamValid-index.html">Team Valid</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
