--- a/TeamValid-index.html
+++ b/TeamValid-index.html
@@ -52,7 +52,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- End Google Tag Manager (noscript) -->
 <div class="topnav" id="myTopnav">
-    <a href="index.html" class="active">Home</a>
+    <a href="sportsmshome-index.html" class="active">Home</a>
     <a href="TeamValid-index.html">Team Valid</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars"></i>
